@@ -17,6 +17,8 @@
   <body>
     <ul id="accesskeys" class="hiddenStructure" />
     <div id="portal-top">
+    <div id="mobile-logo" />
+
       <ul class="mobileButtons">
         <li>
           <a href="#" id="toggle_search" title=""></a>
